Edited resources and added new templates.

--- a/spring-boot-module/src/main/resources/messages.properties
+++ b/spring-boot-module/src/main/resources/messages.properties
@@ -8,8 +8,13 @@ user.name.symbols=Name should contain only letters of latin alphabet.
 user.surname.empty=Surname must not be empty.
 user.surname.length=Surname must be no longer than 40 symbols.
 user.surname.symbols=Surname should contain only letters of latin alphabet.
-user.patronymic.length=Patronymic must be no longer than 40 symbols.
-user.patronymic.symbols=Patronymic should contain only letters of latin alphabet.
 user.role.name.empty=Role name can't be empty.
 user.role.invalid=Chosen role doesn't matches with any proper value.
 user.role.empty=Role can't be empty.
+user.profile.address.empty=Address must not be empty.
+user.profile.address.length=Address must be no longer than 30 symbols.
+user.profile.telephone.empty=Telephone must not be empty.
+user.profile.telephone.format=Invalid telephone format.
+user.password.empty=Password must not be empty.
+user.password.length=Password length should be between 4 an 20 symbols.
+user.old-password.invalid=Invalid old password!
