Added additional error messages. Minor changes.

--- a/spring-boot-module/src/main/resources/messages.properties
+++ b/spring-boot-module/src/main/resources/messages.properties
@@ -18,3 +18,12 @@ user.profile.telephone.format=Invalid telephone format.
 user.password.empty=Password must not be empty.
 user.password.length=Password length should be between 4 an 20 symbols.
 user.old-password.invalid=Invalid old password!
+item.name.empty=Name must not be empty.
+item.name.length=Name must be no longer than 30 symbols.
+item.unique_number.empty=Unique number must not be empty.
+item.unique_number.length=Unique number length should be between 5 an 6 symbols.
+item.unique_number.not_unique=Item with such unique number already exists.
+item.price.empty=Price must not be empty.
+item.price.format=Invalid price format. Valid price format: 00.00.
+item.description.empty=Description must not be empty.
+item.description.length=Description must be no longer than 200 symbols.
